# Distributed-Network-Traffic-Monitoring-System

./: .gitignore  Makefile  README.md
backend/: CMakeLists.txt
backend/agent/src/: AgentHttpServer.cpp  AgentService.cpp
backend/controller/include/controller/: ControllerHttpServer.hpp  HttpAgentClient.hpp
backend/controller/src/: HttpAgentClient.cpp
backend/include/controller/: AgentRegistry.hpp
backend/sniffer/include/sniffer/: types.hpp
backend/src/controller/: ControllerJsonMapper.cpp
docs/: API_CHEATSHEET.md  REPO_REFACTOR_NOTES.md
frontend/controller-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/controller-ui/src/: App.tsx  index.css  main.tsx
frontend/controller-ui/src/lib/: agentUtils.ts  api.ts  captureUtils.ts  format.ts
frontend/controller-ui/src/pages/: AgentDetailPage.tsx  AgentsPage.tsx  CaptureDetailPage.tsx  CapturesPage.tsx  DashboardPage.tsx  SettingsPage.tsx
include/agent/: AgentCaptureManager.hpp  AgentService.hpp
include/controller/: AgentRegistry.hpp  ControllerJsonMapper.hpp  ControllerService.hpp  ControllerTypes.hpp  HttpAgentClient.hpp  IAgentClient.hpp
packet-sniffer/: CMakeLists.txt
packet-sniffer/include/agent/: AgentCaptureManager.hpp  AgentHttpServer.hpp  AgentJsonMapper.hpp  AgentService.hpp  AgentTypes.hpp  http_server.hpp  json_mapper.hpp  service.hpp  types.hpp
packet-sniffer/include/sniffer/: capture.hpp  capture_service.hpp  types.hpp
packet-sniffer/src/: capture.cpp  cli.cpp  cli.hpp  main.cpp  sniffer.cpp  sniffer.hpp
packet-sniffer/src/agent/: AgentCaptureManager.cpp  AgentHttpServer.cpp  AgentJsonMapper.cpp  AgentService.cpp  http_server.cpp  json_mapper.cpp  service.cpp
packet-sniffer/src/agent_app/: main.cpp
packet-sniffer/src/sniffer/: capture.cpp
src/agent/: AgentHttpServer.cpp  AgentJsonMapper.cpp
src/cli/: main.cpp
src/controller/: AgentRegistry.cpp  ControllerHttpServer.cpp  ControllerJsonMapper.cpp  ControllerService.cpp  HttpAgentClient.cpp
src/controller_app/: main.cpp
